force-app/main/default/objects/Questao__c/Questao__c.object-meta.xml
<CustomObject>
    <label>Questão</label>
    <nameField>
        <label>Nome/ID da Questão</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questões</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>