force-app/main/default/objects/Questao__c/fields/Certificacao__c.field-meta.xml
<CustomField>
    <fullName>Certificacao__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Certificação</label>
    <referenceTo>Certificacao__c</referenceTo>
    <relationshipLabel>Questões</relationshipLabel>
    <relationshipName>Questoes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>