force-app/main/default/objects/Questao__c/fields/CodigoInterno__c.field-meta.xml
<CustomField>
    <fullName>CodigoInterno__c</fullName>
    <externalId>true</externalId>
    <label>Código Interno</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>