force-app/main/default/objects/Questao__c/fields/CodigoQuestao__c.field-meta.xml
<CustomField>
    <fullName>CodigoQuestao__c</fullName>
    <label>Código da Questão</label>
    <length>10</length>
    <type>Text</type>
</CustomField>