force-app/main/default/objects/Questao__c/fields/ColecaoSimulado__c.field-meta.xml
<CustomField>
    <fullName>ColecaoSimulado__c</fullName>
    <label>Coleção do Simulado</label>
    <length>80</length>
    <type>Text</type>
</CustomField>