force-app/main/default/objects/Questao__c/fields/DataCriacao__c.field-meta.xml
<CustomField>
    <fullName>DataCriacao__c</fullName>
    <label>Data de Criação</label>
    <type>DateTime</type>
</CustomField>