force-app/main/default/objects/Questao__c/fields/DataUltimaRevisaoConteudo__c.field-meta.xml
<CustomField>
    <fullName>DataUltimaRevisaoConteudo__c</fullName>
    <label>Data Última Revisão do Conteúdo</label>
    <type>Date</type>
</CustomField>