force-app/main/default/objects/Questao__c/fields/DominioPrincipal__c.field-meta.xml
<CustomField>
    <fullName>DominioPrincipal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Domínio Principal</label>
    <referenceTo>DominioCertificacao__c</referenceTo>
    <relationshipLabel>Questões (Domínio Principal)</relationshipLabel>
    <relationshipName>QuestoesDominio</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>