force-app/main/default/objects/Questao__c/fields/Enunciado__c.field-meta.xml
<CustomField>
    <fullName>Enunciado__c</fullName>
    <label>Enunciado</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>