force-app/main/default/objects/Questao__c/fields/ExplicacaoResposta__c.field-meta.xml
<CustomField>
    <fullName>ExplicacaoResposta__c</fullName>
    <label>Explicação da Resposta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>