force-app/main/default/objects/Questao__c/fields/NivelDificuldade__c.field-meta.xml
<CustomField>
    <fullName>NivelDificuldade__c</fullName>
    <label>Nível de Dificuldade</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MuitoFacil</fullName>
                <label>Muito Fácil</label>
            </value>
            <value>
                <fullName>Facil</fullName>
                <label>Fácil</label>
            </value>
            <value>
                <fullName>Media</fullName>
                <default>true</default>
                <label>Média</label>
            </value>
            <value>
                <fullName>Dificil</fullName>
                <label>Difícil</label>
            </value>
            <value>
                <fullName>MuitoDificil</fullName>
                <label>Muito Difícil</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>