force-app/main/default/objects/Questao__c/fields/NivelSimulado__c.field-meta.xml
<CustomField>
    <fullName>NivelSimulado__c</fullName>
    <label>Nível do Simulado</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>