force-app/main/default/objects/Questao__c/fields/OrigemSimulado__c.field-meta.xml
<CustomField>
    <fullName>OrigemSimulado__c</fullName>
    <label>Origem do Simulado</label>
    <length>80</length>
    <type>Text</type>
</CustomField>