force-app/main/default/objects/Questao__c/fields/PossuiMidia__c.field-meta.xml
<CustomField>
    <fullName>PossuiMidia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possui Mídia</label>
    <type>Checkbox</type>
</CustomField>