force-app/main/default/objects/Questao__c/fields/StatusPublicacao__c.field-meta.xml
<CustomField>
    <fullName>StatusPublicacao__c</fullName>
    <label>Status de Publicação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rascunho</fullName>
                <default>true</default>
                <label>Rascunho</label>
            </value>
            <value>
                <fullName>Publicado</fullName>
            </value>
            <value>
                <fullName>Arquivado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>