force-app/main/default/objects/Questao__c/fields/Subtopico__c.field-meta.xml
<CustomField>
    <fullName>Subtopico__c</fullName>
    <label>Subtópico</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>