force-app/main/default/objects/Questao__c/fields/TipoQuestao__c.field-meta.xml
<CustomField>
    <fullName>TipoQuestao__c</fullName>
    <label>Tipo de Questão</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MultiplaEscolha</fullName>
                <label>Múltipla Escolha</label>
            </value>
            <value>
                <fullName>MultiplaResposta</fullName>
                <label>Múltipla Resposta</label>
            </value>
            <value>
                <fullName>VerdadeiroFalso</fullName>
                <label>Verdadeiro/Falso</label>
            </value>
            <value>
                <fullName>Flashcard</fullName>
            </value>
            <value>
                <fullName>Simulado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>