force-app/main/default/objects/Questao__c/fields/TopicoPrincipal__c.field-meta.xml
<CustomField>
    <fullName>TopicoPrincipal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tópico Principal</label>
    <referenceTo>Topico__c</referenceTo>
    <relationshipLabel>Questões</relationshipLabel>
    <relationshipName>Questoes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>